# Composition

./: .gitignore  CMakeLists.txt  README.md
src/: Image.cpp  Image.h  UserInterface.cpp  UserInterface.h  main.cpp
src/Helpers/: FileHelper.cpp  FileHelper.h  ImageProcessingHelper.cpp  ImageProcessingHelper.h  StringHelpers.cpp  StringHelpers.h
src/Tools/: ChannelType.h  Debug.cpp  Debug.h  ImageType.h
